--- a/.jshintrc
+++ b/.jshintrc
@@ -10,7 +10,7 @@
   "indent": 2,
   "newcap": true,
   "noarg": true,
-  "quotmark": "single",
+  "quotmark": true,
   "undef": true,
   "unused": "vars",
   "strict": true
