--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "gulp-replace": "^0.4.0",
     "gulp-compass": "^2.0.3",
     "gulp-size": "^1.0.0",
+    "gulp-concat": "^2.4.3",
     "gulp-uglify": "^0.3.1",
     "gulp-uncss": "^0.4.5",
     "gulp-useref": "^0.6.0",
