--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "devDependencies": {
     "apache-server-configs": "^2.7.1",
     "browser-sync": "^1.3.0",
+    "browserify":"^8.1.3",
     "del": "^0.1.2",
     "gulp": "^3.8.5",
     "gulp-autoprefixer": "^0.0.8",
@@ -15,7 +16,7 @@
     "gulp-load-plugins": "^0.5.3",
     "gulp-minify-html": "^0.1.4",
     "gulp-replace": "^0.4.0",
-    "gulp-compass": "^2.0.3",
+    "gulp-ruby-sass": "^0.7.1",
     "gulp-size": "^1.0.0",
     "gulp-concat": "^2.4.3",
     "gulp-uglify": "^0.3.1",
@@ -25,6 +26,8 @@
     "opn": "^1.0.0",
     "psi": "^0.1.2",
     "require-dir": "^0.1.0",
+    "vinyl-source-stream":"^1.0.0",
+    "vinyl-buffer":"^1.0.0",
     "run-sequence": "^0.3.6"
   },
   "engines": {
